--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
+      gap: 20px;
       width: 100%;
       max-width: 280px;
     }
@@ -267,6 +267,373 @@
       color: #666;
       min-width: 40px;
     }
+
+    .break-tasks-section {
+      margin-top: 10px;
+      padding-top: 20px;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    .break-tasks-list {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      max-height: 200px;
+      overflow-y: auto;
+      margin-bottom: 12px;
+    }
+
+    .break-task-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px;
+      background: #f5f5f5;
+      border-radius: 6px;
+    }
+
+    .break-task-checkbox {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+      flex-shrink: 0;
+    }
+
+    .break-task-item.editing {
+      background: #fff;
+      border: 1px solid #4a90e2;
+    }
+
+    .break-task-text {
+      flex: 1;
+      font-size: 14px;
+      color: #333;
+      border: none;
+      background: transparent;
+      padding: 4px;
+    }
+
+    .break-task-text:focus {
+      outline: none;
+    }
+
+    .break-task-text.editing {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      padding: 6px 8px;
+    }
+
+    .break-task-actions {
+      display: flex;
+      gap: 4px;
+    }
+
+    .break-task-btn {
+      width: 28px;
+      height: 28px;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .break-task-btn .btn-icon {
+      width: 16px;
+      height: 16px;
+    }
+
+    .add-task-input-group {
+      display: flex;
+      gap: 8px;
+      margin-top: 8px;
+    }
+
+    .add-task-input {
+      flex: 1;
+      padding: 8px 12px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
+      font-family: inherit;
+      color: #333;
+      background: white;
+    }
+
+    .add-task-input:focus {
+      outline: none;
+      border-color: #4a90e2;
+    }
+
+    .add-task-btn {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 6px;
+      background: #4a90e2;
+      color: white;
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    .add-task-btn:hover {
+      background: #357abd;
+    }
+
+    .add-task-btn:active {
+      background: #2a5f94;
+    }
+
+    .icon-edit {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    .icon-delete {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    .icon-check {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    .icon-cancel {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    .break-tasks-checklist {
+      display: none;
+      width: 100%;
+      max-width: 280px;
+      margin-top: 0;
+      margin-bottom: 0;
+      padding: 16px;
+      background: rgba(80, 200, 120, 0.1);
+      border: 2px solid #50c878;
+      border-radius: 12px;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+
+    .break-tasks-checklist.visible {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .break-tasks-checklist-title {
+      font-size: 16px;
+      font-weight: 600;
+      color: #50c878;
+      margin-bottom: 12px;
+      text-align: center;
+    }
+
+    .break-task-checklist-item {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 12px;
+      background: white;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+      transition: all 0.2s ease;
+    }
+
+    .break-task-checklist-item:hover {
+      background: #f9f9f9;
+      border-color: #50c878;
+    }
+
+    .break-task-checklist-checkbox {
+      width: 22px;
+      height: 22px;
+      cursor: pointer;
+      flex-shrink: 0;
+      accent-color: #50c878;
+    }
+
+    .break-task-checklist-label {
+      flex: 1;
+      font-size: 15px;
+      color: #333;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .break-task-checklist-item.completed .break-task-checklist-label {
+      text-decoration: line-through;
+      color: #999;
+      font-weight: 400;
+    }
+
+    .task-selection-screen {
+      display: none;
+      width: 100%;
+      max-width: 280px;
+      flex-direction: column;
+      gap: 16px;
+      padding: 20px;
+      background: rgba(80, 200, 120, 0.1);
+      border: 2px solid #50c878;
+      border-radius: 12px;
+    }
+
+    .task-selection-screen.visible {
+      display: flex;
+    }
+
+    .task-selection-title {
+      font-size: 18px;
+      font-weight: 600;
+      color: #50c878;
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    .task-selection-list {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-height: 250px;
+      overflow-y: auto;
+    }
+
+    .task-selection-btn {
+      padding: 14px 20px;
+      border: 2px solid #50c878;
+      border-radius: 8px;
+      background: white;
+      color: #50c878;
+      font-size: 15px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      text-align: center;
+    }
+
+    .task-selection-btn:hover {
+      background: #50c878;
+      color: white;
+    }
+
+    .task-selection-btn.no-task {
+      border-color: #999;
+      color: #666;
+    }
+
+    .task-selection-btn.no-task:hover {
+      background: #999;
+      color: white;
+    }
+
+    .task-name-display {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 20px);
+      font-size: 13px;
+      font-weight: 500;
+      color: #666;
+      text-align: center;
+      white-space: nowrap;
+      max-width: 160px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      z-index: 2;
+      margin-top: 30px;
+    }
+
+    .task-name-display.break {
+      color: #50c878;
+    }
+
+    .completion-confirmation {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(4px);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .completion-confirmation.visible {
+      display: flex;
+    }
+
+    .completion-confirmation-content {
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      max-width: 320px;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    }
+
+    .completion-confirmation-text {
+      font-size: 16px;
+      color: #333;
+      text-align: center;
+      line-height: 1.5;
+    }
+
+    .completion-confirmation-buttons {
+      display: flex;
+      gap: 12px;
+    }
+
+    .completion-btn {
+      flex: 1;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      font-size: 15px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .completion-btn.yes {
+      background: #50c878;
+      color: white;
+    }
+
+    .completion-btn.yes:hover {
+      background: #45b368;
+    }
+
+    .completion-btn.no {
+      background: #e0e0e0;
+      color: #666;
+    }
+
+    .completion-btn.no:hover {
+      background: #d0d0d0;
+    }
   </style>
 </head>
 <body>
@@ -301,6 +668,14 @@
           <span class="settings-unit">minutes</span>
         </div>
       </div>
+      <div class="break-tasks-section">
+        <label class="settings-label">Break Tasks</label>
+        <div class="break-tasks-list" id="breakTasksList"></div>
+        <div class="add-task-input-group">
+          <input type="text" id="newTaskInput" class="add-task-input" placeholder="Add a break task...">
+          <button class="add-task-btn" id="addTaskBtn">Add</button>
+        </div>
+      </div>
     </div>
 
     <div class="mode-indicator focus">Focus</div>
@@ -311,6 +686,17 @@
         <circle class="timer-ring-circle timer-ring-progress" cx="100" cy="100" r="90"></circle>
       </svg>
       <div class="time-display">25:00</div>
+      <div class="task-name-display" id="taskNameDisplay"></div>
+    </div>
+
+    <div class="task-selection-screen" id="taskSelectionScreen">
+      <div class="task-selection-title">Select a Break Task</div>
+      <div class="task-selection-list" id="taskSelectionList"></div>
+    </div>
+
+    <div class="break-tasks-checklist" id="breakTasksChecklist">
+      <div class="break-tasks-checklist-title">Break Tasks</div>
+      <div id="breakTasksChecklistItems"></div>
     </div>
 
     <div class="controls">
@@ -329,6 +715,19 @@
       </button>
     </div>
   </div>
+
+  <div class="completion-confirmation" id="completionConfirmation">
+    <div class="completion-confirmation-content">
+      <div class="completion-confirmation-text" id="completionConfirmationText">
+        Did you complete this break task?
+      </div>
+      <div class="completion-confirmation-buttons">
+        <button class="completion-btn yes" id="completionYesBtn">Yes</button>
+        <button class="completion-btn no" id="completionNoBtn">No</button>
+      </div>
+    </div>
+  </div>
+
   <script src="renderer.js"></script>
 </body>
 </html>
